@@ -1,0 +1,7 @@
+package HTML::StateTable::Column::Trait::Number;
+
+use Moo::Role;
+
+use namespace::autoclean;
+
+1;
